--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": false,
   "name": "hs-enum",
-  "version": "0.1.0",
-  "description": "",
-  "repository": "",
+  "version": "0.1.2",
+  "description": "A JS take on Headspring Enumeration",
+  "repository": "https://github.com/crisberrios/hs-enum",
   "author": "Cristian Berrios",
   "license": "MIT",
   "keywords": ["enumeration", "dictionary", "headspring"],
@@ -11,7 +11,7 @@
   "jsnext:main": "index.es6.js",
   "babel": {
     "presets": [
-      ["es2015", {"loose": true}],
+      ["es2015", { "modules": false}],
       "stage-2"
     ],
     "plugins": [
